--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,14 +31,14 @@ a{
 }
 
 /* label underline focus color */
-/* .input-field input[type=text]:focus {
+.input-field input[type=text]:focus {
     border-bottom: 1px solid rgb(47, 125, 249) !important;
     box-shadow: 0 1px 0 0 rgb(47, 125, 249) !important;
 }
 .input-field input[type=password]:focus {
     border-bottom: 1px solid rgb(47, 125, 249) !important;
     box-shadow: 0 1px 0 0 rgb(47, 125, 249) !important;
-} */
+}
 
 .gallery{
     display: flex;
