--- a/client/src/components/Chats/styles.css
+++ b/client/src/components/Chats/styles.css
@@ -4,3 +4,9 @@
     overflow-y: scroll;
     scrollbar-width: none;
   }
+
+  .input-f input[type=text]:focus {
+    border-bottom: none !important;
+    box-shadow: none !important;
+    outline: none;
+}
